@@ -76,6 +76,7 @@ _WTFReportFatalError
 __Z12jsRegExpFreeP8JSRegExp
 __Z15jsRegExpCompilePKti24JSRegExpIgnoreCaseOption23JSRegExpMultilineOptionPjPPKc
 __Z15jsRegExpExecutePK8JSRegExpPKtiiPii
+__ZN14OpaqueJSString6createERKN3KJS7UStringE
 __ZN3KJS10Identifier11addSlowCaseEPNS_12JSGlobalDataEPNS_7UString3RepE
 __ZN3KJS10Identifier11addSlowCaseEPNS_9ExecStateEPNS_7UString3RepE
 __ZN3KJS10Identifier24checkSameIdentifierTableEPNS_12JSGlobalDataEPNS_7UString3RepE
